--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "9.4.5",
+    "body-parser": "^1.18.2",
     "express": "4.16.2",
     "fs": "0.0.1-security",
+    "mssql": "^4.1.0",
+    "tedious": "2.3.1",
     "nodemailer": "^4.4.2",
     "nodemon": "1.14.12",
     "tslint": "^5.9.1"
