--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch & nodemon dist",
-    "test": "tsc && mocha dist/**/*.spec.js",
+    "test": "mocha dist/*.test.js",
     "lint": "eslint src --ext ts",
     "tsc": "tsc"
   },
@@ -32,7 +32,7 @@
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-promise": "3.6.0",
-    "mocha": "5.0.0",
+    "mocha": "^5.0.0",
     "supertest": "3.0.0",
     "tsc": "1.20150623.0",
     "typescript": "2.7.1",
