--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "dev": "tsc --watch & nodemon dist",
     "test": "mocha dist/*.test.js",
     "lint": "eslint src --ext ts",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "9.4.5",
     "body-parser": "^1.18.2",
     "express": "4.16.2",
     "fs": "0.0.1-security",
     "mssql": "^4.1.0",
     "nodemailer": "^4.4.2",
-    "nodemon": "1.14.12",
     "os": "^0.1.1",
-    "tedious": "2.3.1",
-    "tslint": "^5.9.1"
+    "tedious": "2.3.1"
   },
   "devDependencies": {
+    "tslint": "^5.9.1",
+    "nodemon": "1.14.12",
     "@types/mocha": "2.2.48",
     "@types/node": "9.4.5",
     "eslint": "4.17.0",
