--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch & nodemon dist",
+    "dev": "tsc --watch & nodemon dist/server.js",
     "test": "mocha dist/*.test.js",
     "lint": "eslint src --ext ts",
     "tsc": "tsc",
