--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.18.2",
     "express": "4.16.2",
     "fs": "0.0.1-security",
+    "mkdirp": "^0.5.1",
     "mssql": "^4.1.0",
     "nodemailer": "^4.4.2",
     "os": "^0.1.1",
